# playlist-into-spotify

./: .gitignore  README.md  playlist_to_spotify.py  pyproject.toml
